# mem_sub_v1

./: .gitignore  LICENSE  README.md  VERIFICATION_LOG.txt  align_image.py  basis_fn.py  bg_estimation.py  color2binary.py  create_dsq_job.sh  create_dsq_out_of_failed_jobs.sh  create_job_list.py  downsample.py  downsample_micrograph.py  environment.yml  environment_desktop.yml  find_rotation.py  fit_basis_to_data.py  fuzzymask.py  image_rotation.py  mask_over_image.py  membrane_estimation.py  membrane_subtract.py  membrane_subtract_mrc.py  mrc2image.py  mrc2jpg.py  mrc_utils.py  parameters.yml  pyproject.toml  readmrc.py  recon_patch.py  run.py  run.sh  run_mrc.py  run_mrc_subtraction.py  run_subtraction.py  sampling_grid.py  seg_onnx.py  seg_parameters.yml  seg_sub_one_file.sh  seg_subtract.sh  (+8 more)
denoising/: denoise.py  denoise.sh  read_membrane_imgs.py
iteration_experiment/: iteration_vs_subtraction.py
membrane_seg/: seg_onnx.py
membrane_sub/: environment.yml  mrc2image.py  run_mrc_subtraction.py  seg_subtract_one_file.sh
scripts/: convert_mrc.sh  copy_unprocessed_files.py  create_dsq_job.sh  create_job_list.py  record_hash.py  seg_mrc.sh  seg_subtract.sh  seg_subtract_desktop.sh  seg_subtract_one_file.sh  seg_subtract_v1.sh
temp/: calc_image_gradient.py  compare_val_test.py  convert_jpg2mrc.py  crop_mrc.py  dialate_mask.py  diff_with_fred_downsampling.py  downsample_upsample.py  find_membrane_from_subraction.py  find_rotation.py  log_gaussian.py  membrane_histogram.py  membrane_subtract.py  new_downsample.py  rename_files.py  run.py  save_unlabeled_files.py
(+55 files in other folders)
