[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mem_sub"
version = "0.1.0"
description = "Scientific framework for membrane subtraction and membrane estimation from CryoEM images."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [ { name = "Anna Starynska", email = "you@example.com" } ]

# Runtime dependencies - edit to match your environment if needed
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black"]

[project.urls]
"Repository" = "https://example.com/your-repo"

[tool.setuptools.packages.find]
where = ["src"]
