[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mem_sub"
dynamic = ["version"]
description = "Scientific framework for membrane subtraction and membrane estimation from CryoEM images."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [ { name = "Anna Starynska, Hemant Tagare" } ]

# Runtime dependencies - edit to match your environment if needed
dependencies = []


[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "setuptools-scm"
]

[project.urls]
"Repository" = "https://github.com/annstar-dl/mem_sub_v1#"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
